# promethean

./: .gitignore  README.md  pyproject.toml
promethean/: axolotl.py  core.py  datasets.py  extract.py  llama.py  lora.py
tests/: smoke_test.py
unfat/: axolotl.py  client.py  datasets.py  extract.py  lora.py  together.py
